# AgentMonitorOverlay

./: .gitignore  DEVELOPMENT.md  PROJECT_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  USER_SESSION_MANUAL.md  amo.local.example.json  amo.ps1  package.json
.github/workflows/: release-portable.yml
broker/: .gitignore  README.md  server.js
broker/hooks/: claude.js  codex.js
broker/lib/: amo-constants.js  canvas-writer.js  chatgpt-desktop.js  chatgpt-desktop.test.js  claude-launch-settings.js  claude-launch-settings.test.js  claude-provider.js  claude-provider.test.js  cli-environments.js  conversation-artifacts.js  conversation-service.js  debug.js  display-names.js  filesystem.js  http.js  launch-store.js  launch-store.test.js  normalize.js  obsidian-bridge.js  obsidian-vault.js  obsidian-vault.test.js  pending-prompts.js  permission-gate.js  session-store.js  session-store.test.js  target-binding.js  target-binding.test.js  terminal-launch.js  terminal-launch.test.js  text-format.js  transcript-monitor.js  transcript-monitor.test.js  workspace-deploy.js  workspace-document-mappings.js  workspace-document-mappings.test.js  workspace-git-exclude.js  workspace-inspect.js  workspace-launch.js  workspace-maintenance.js  workspace-registry.js
broker/routes/: config.js  obsidian.js  sessions.js  workspaces.js
docs/: adapter-deployment-guide.md  amo-module-architecture.md  amo-obsidian-bridge-mvp.md  data-and-privacy.md  getting-started.md  managed-side-fork-plan.md  obsidian-note-spike.md  obsidian-sync-back-bridge.md  obsidian-sync-back-handoff.md  portable-release-sop.md  project-structure.md  public-release-roadmap.md  refactor-execution-guide.md  refactor-plan.md  runtime-architecture-v2.md  session-layout-v2.md  shortcut-configuration.md  source-stable-startup.md  supervisor-status.md  third-party-audit.md  tool-adapter-spike.md  validation-checklist.md  window-routing-notes.md  workspace-managed-launch-plan.md  worktree-checkpoint-guide.md
docs/agnets/: obsidian-canvas-development-guidelines.md  obsidian-markdown-rendering-skill.md  obsidian-plugin-agent.md  obsidian-plugin-backlog.md
docs/session-handoffs/: 2026-05-11-phase-3-4-checkpoint.md  2026-05-13-amo-obsidian-bridge-pivot.md
docs/tasks/: task-a-window-routing-spike.md  task-b-broker-skeleton.md  task-c-overlay-ui-prototype.md  task-d-tool-adapter-spike.md  task-e-supervisor-integration.md  task-g-obsidian-plugin-model-spike.md  (+3 more)
obsidian-plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css
overlay/: README.md  index.html  package-lock.json  package.json  vite.config.ts
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: broker.rs  clipboard.rs  dialogs.rs  lib.rs  main.rs  model_credentials.rs  models.rs  opener.rs  scratchpad.rs  tray.rs  windows.rs
(+153 files in other folders)
