[package]
name = "agent-monitor-overlay"
version = "0.1.2"
description = "Windows desktop overlay prototype for monitoring local agent sessions."
authors = ["kadhygh"]
license = "MIT"
repository = "https://github.com/kadhygh/AgentMonitorOverlay"
edition = "2021"

[lib]
name = "agent_monitor_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "~2.11.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-notification = "2.3.3"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Threading"] }
